# OpenGLRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
data/scenes/: .gitignore
data/scenes/cbox/: cbox.json
data/scenes/staircase/: staircase.json
data/shaders/: ggx.fs  ggx.vs  ggx_approx.fs  hdr2ldr.frag  matte.frag  matte.fs  matte.vert  matte.vs  phong.frag  phong.fs  phong.vert  phong.vs  point_shadows_depth.geom
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cli.cpp
src/apps/: cli.cpp
src/base/: CMakeLists.txt  camera.cpp  camera.h  depth_cube_map.cpp  depth_cube_map.h  geometry.cpp  geometry.h  hdr2ldr.h  light.h  light_manager.h  pipeline.cpp  pipeline.h  pixel.h  scene_info.cpp  scene_info.h  scene_parser.cpp  scene_parser.h  shader.h  texture.h  texture_manager.h  texture_packer.cpp  texture_packer.h
src/core/: CMakeLists.txt  basic_traits.h  constant.h  logger.cpp  logger.h  macro.h  serialize.h  stl.h  util.h
src/ext/: CMakeLists.txt  dummy.cpp
src/ext/glad/glad/: glad.c  glad.h
src/ext/imgui/: CMakeLists.txt
src/ext/stb/: stb.c
src/material/: CMakeLists.txt  phong.cpp
src/util/: CMakeLists.txt  imageio.cpp  imageio.h
